fix help hiding behind overflow

--- a/app/css/vxxb.css
+++ b/app/css/vxxb.css
@@ -145,7 +145,7 @@ nav {
 
 	/* TODO: MORE SPACE */
 	height: 44px;
-	overflow: hidden;
+	/*overflow: hidden;*/
 }
 
 nav a {
